--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 
-  Welcome to Jay's Programming Portfolio!
+  Welcome to <em>Jay's</em> Programming Portfolio!
     </body>
 </html>
