--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Jay's Programming Portfolio</title>
     </head>
     <body>
-
+    <img crc>csc106banner.png.png</img crc>
   Welcome to <em>Jay's</em> Programming Portfolio!
     </body>
 </html>
