--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Jay's Programming Portfolio</title>
     </head>
     <body>
-    <img src = csc106banner.png.png>
+    <img src = csc106banner.png>
     <br>
   Welcome to <em>Jay's</em> Programming Portfolio!
     </body>
