--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     </head>
     <body>
     <img src = csc106banner.png>
+        <table>
+            <tbody>
+                <tr>
+                   <td><img src="homebutton.png"><\td>    
+                <\tr>  
+            <\tbody>
+            <tbody>
+                <tr>
+                    <td><img src="javascriptsbutton.png"><\td>
+                <\tr>
+            <\tbody>
+                 <tbody>
+                <tr>
+                    <td><img src="aboutmebutton.png"><\td>
+                <\tr>
+            <\tbody>
     <br>
   Welcome to <em>Jay's</em> Programming Portfolio!
+        <p>
+            
     </body>
 </html>
