--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
         <table>
             <tbody>
                 <tr>
-                   <td><img src="homebutton.png"><\td>    
-                <\tr>  
-            <\tbody>
-            <tbody>
+                   <td><img src="homebutton.png">   
                 <tr>
-                    <td><img src="javascriptsbutton.png"><\td>
-                <\tr>
-            <\tbody>
-                 <tbody>
+                    <td><img src="javascriptsbutton.png">
                 <tr>
-                    <td><img src="aboutmebutton.png"><\td>
+                    <td><img src="aboutmebutton.png">
                 <\tr>
             <\tbody>
     <br>
