--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <body>
     <img src = csc106banner.png>
         <table>
-            <tbody>
+            <thead>
                 <tr>
-                   <td><img src="homebutton.png">   
+                   <th><img src="homebutton.png">   
                 <tr>
-                    <td><img src="javascriptsbutton.png">
+                    <th><img src="javascriptsbutton.png">
                 <tr>
-                    <td><img src="aboutmebutton.png">
+                    <th><img src="aboutmebutton.png">
     <br>
   Welcome to <em>Jay's</em> Programming Portfolio!
             
