--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                    <th><img src="javascriptsbutton.png">
                 
                    <th><img src="aboutmebutton.png">
-         <\table>              
+         </table>              
     <br>
   Welcome to <em>Jay's</em> Programming Portfolio!
             
