--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
                    <th><img src="aboutmebutton.png">
          </table>              
     <br>
-  Welcome to <em>Jay's</em> Programming Portfolio!
+                <h1> Welcome to <em>Jay's</em> Programming Portfolio! </h1>
+                <br>
+                <br>
+  <p>   Hello there! My name                 
             
     </body>
 </html>
