--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <h1> Welcome to <em>Jay's</em> Programming Portfolio! </h1>
                 <br>
                 <br>
-  <p>   Hello there! My name                 
+        <p>Hello there! My name is Jay; I'm a computer science major and IT Service Desk Consultant at the University of Rhode Island. </p>
+        <p>I believe this website to be a stepping stone of sorts into something much greater. Ever since middle school, I have developed a profound love for technology and 
+            its breakneck advancement in the modern era. 
             
     </body>
 </html>
