--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p>Hello there! My name is Jay; I'm a computer science major and IT Service Desk Consultant at the University of Rhode Island. </p>
         <p>I believe this website to be a stepping stone of sorts into something much greater. Ever since middle school, I have developed a profound love for technology and 
             its breakneck advancement in the modern era. 
-            
+            <br>
+            You can learn more about me by clicking on the "About Me" button!
     </body>
 </html>
