--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
                 <br>
                 <br>
         <p>Hello there! My name is Jay; I'm a computer science major and IT Service Desk Consultant at the University of Rhode Island. </p>
-        <p>I believe this website to be a stepping stone of sorts into something much greater. Ever since middle school, I have developed a profound love for technology and 
-            its breakneck advancement in the modern era. 
+        <p>I believe this website to be a stepping stone of sorts into something much greater. As my first website, this will be extremely barebones for now and be updated 
+            at varying intervals in terms of functionality and, depending on my programming skill, may turn into a greater, more aesthetically appealing endeavor.
+                </p>
             <br>
+                <p>
             You can learn more about me by clicking on the "About Me" button!
+                </p>
+                    <br>
+            This website currently only features limited functionality and several buttons to switch to different pages. I will update this text once the buttons are 
+                functional.
     </body>
 </html>
