--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <p>
             You can learn more about me by clicking on the "About Me" button!
                 </p>
+                <p>
+                    Likewise, my Javascripts can be found by clicking on the "Javascripts" button.
+                </p>
                     <br>
             This website currently only features limited functionality and several buttons to switch to different pages. I will update this text once the buttons are 
                 functional.
