--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1> Welcome to <em>Jay's</em> Programming Portfolio! </h1>
                 <br>
                 <br>
-        <p>Hello there! My name is Jay; I'm a computer science major and IT Service Desk Consultant at the University of Rhode Island. </p>
+                <p>Hello there! My name is <strong>Jay</strong>; I'm a computer science major and IT Service Desk Consultant at the University of Rhode Island. </p>
         <p>I believe this website to be a stepping stone of sorts into something much greater. As my first website, this will be extremely barebones for now and be updated 
             at varying intervals in terms of functionality and, depending on my programming skill, may turn into a greater, more aesthetically appealing endeavor.
                 </p>
