--- a/javascripts.html
+++ b/javascripts.html
@@ -9,11 +9,14 @@
         <table>
             <thead>
                 <tr>
-                   <th><img src="homebutton.png">   
+                    <th>
+                       <a href="index.html"> <img src="homebutton.png"> </a>  
                
-                   <th><img src="javascriptsbutton.png">
+                   <th>
+                       <a href="javascripts.html"> <img src="javascriptsbutton.png"> </a>
                 
-                   <th><img src="aboutmebutton.png">
+                   <th>
+                       <a href="about.html"> <img src="aboutmebutton.png"> </a>
          </table>              
     <br>
                 <p>
