--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <h1> ABOUT ME </h1>
                 <br>
                 <br>
-                <p>This section is currenlty undergoing construction! 
+                <p>This section is currently undergoing construction! 
                 </p>
     </body>
 </html>
