--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                     Likewise, my Javascripts can be found by clicking on the "Javascripts" button.
                 </p>
                     <br>
-            This website currently only features limited functionality and several buttons to switch to different pages. I will update this text once the buttons are 
-                functional.
+            This website currently only features limited functionality and several buttons to switch to different pages. I will add more stylization to this website in the near future.
     </body>
 </html>
