--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    <img src = csc106banner.png margin="100%">
+    <img src = csc106banner.png>
         <table>
             <thead>
                 <tr>
