--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <link rel= "stylesheet" href="style.css">
     </head>
     <body>
-    <img src = csc106banner.png>
+    <img src = myBanner.png>
         <table>
             <thead>
                 <tr>
