--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    <img src = myBanner.png>
+    
+    <img src = csc106banner.png>
         <table>
             <thead>
                 <tr>
@@ -20,7 +21,8 @@
                        <a href="about.html"> <img src="aboutmebutton.png"> </a>
          </table>              
     <br>
-                <h1> Welcome to <em>Jay's</em> Programming Portfolio! </h1>
+    <div>           
+    <h1> Welcome to <em>Jay's</em> Programming Portfolio! </h1>
                 <br>
                 <br>
                 <p>Hello there! My name is <strong>Jay</strong>; I'm a computer science major and IT Service Desk Consultant at the University of Rhode Island. </p>
@@ -36,5 +38,6 @@
                 </p>
                     <br>
             This website currently only features limited functionality and several buttons to switch to different pages. I will add more stylization to this website in the near future.
+            </div>
     </body>
 </html>
