--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     
-    <img src = csc106banner.png>
+    <img src = myBanner.png>
         <table>
             <thead>
                 <tr>
