--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <img src = myBanner.png alt="banner" width="100%">
             <tr>
                 <thead>
-                <th>
-                    <a href="index.html"> <img src="homebutton.png"> </a> 
+                <th align="center">
+                <a href="index.html"> <img src="homebutton.png" alt="homebutton" width="200" height="50"> </a> </td>
                 </th> 
                
-                <th>
-                    <a href="javascripts.html"> <img src="javascriptsbutton.png"> </a>
+                <th align="center">
+                <a href="javascripts.html"> <img src="javascriptsbutton.png" alt="homebutton" width="200" height="50"> </a>
                 </th>
 
-                <th>
-                    <a href="about.html"> <img src="aboutmebutton.png"> </a>
+                <th align="center">
+                <a href="about.html"> <img src="aboutmebutton.png" width="200" height="50"> </a>
                 </th>
                 </thead>
             </tr>
