--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
         <link rel= "stylesheet" href="style.css">
     </head>
     <body>
-    <img src = myBanner.png>
+    <div>
+    <img src = myBanner.png alt="banner" width="100%">
         <table>
             <thead>
                 <tr>
