--- a/javascripts.html
+++ b/javascripts.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    <img src = myBanner.png>
+        <div>
+    <img src = myBanner.png alt="banner" width="100%">
         <table>
             <thead>
                 <tr>
@@ -24,5 +25,6 @@
            This page is currently undergoing construction!
                 </p>
                     <br>
+    </div>
     </body>
 </html>
