--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 <th align="center">
                 <a href="about.html"> <img src="aboutmebutton.png" width="200" height="50"> </a>
                 </th>
+
+                <th align="center">
+                    <a href="apps.html"> <img src="appsbutton" alt="apps" width="200" height="50"> </a>
+                </th>
                 </thead>
             </tr>
          </table>              
