--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div>
     <img src = myBanner.png alt="banner" width="100%">
+    <table>
             <tr>
                 <thead>
                 <th align="center">
