--- a/apps.html
+++ b/apps.html
@@ -29,11 +29,17 @@
             </thead>
         </tr>
      </table>
-    <br>
                 <h1> ABOUT ME </h1>
                 <br>
-                <br>
-                <p>This section is currently undergoing construction! 
+                <p>Hello there! I'm Jay Lei, a computer science major here at the University of Rhode Island. I'm very interested in the field of computer science
+                    and wish to make something that will revolutionize the field in the near future. However, I have much more to accomplish before I can fulfill my dreams. 
+                </p>
+                <p>
+                    I used to be a Signals and Communications Officer for my High School JROTC program, and I believe it has taught me a thing or two about web design.
+                    I'm also a pianist, violinist, tennis player, strategy game enjoyer, and WW2 history connoisseur. 
+                </p>
+                <p>I highly suggest looking at my linktree (click on the picture) to find my artistic works and ways to stay in touch!
+                    <a href="https://linktr.ee/carz0987"> <img src="linktreebanner.png" alt="linktree" width="200"></a>
                 </p>
     </body>
 </html>
