--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>About Jay</title>
+        <title>Apps</title>
         <link rel= "stylesheet" href="style.css">
     </head>
     <body>
