--- a/apps.html
+++ b/apps.html
@@ -29,7 +29,7 @@
             </thead>
         </tr>
      </table>
-                <h1> ABOUT ME </h1>
+                <h1> Applications </h1>
                 <br>
                 <p>This is a place for me to showcase my upcoming applications! Stay tuned.
                 </p>
