--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </th>
 
             <th align="center">
-                <a href="apps.html"> <img src="appsbutton" alt="apps" width="200" height="50"> </a>
+                <a href="apps.html"> <img src="appsbutton.png" alt="apps" width="200" height="50"> </a>
             </th>
             </thead>
         </tr>
