--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     I'm also a pianist, violinist, tennis player, strategy game enjoyer, and WW2 history connoisseur. 
                 </p>
                 <p>I highly suggest looking at my linktree (click on the picture) to find my artistic works and ways to stay in touch!
-                    <a href="https://linktr.ee/carz0987"> <img src="linktreebanner.png" alt="linktree" width="200"></a>
+                    <a href="https://linktr.ee/carz0987"> <img src="linktreethumbnail.png" alt="linktree" width="200"></a>
                 </p>
     </body>
 </html>
