--- a/about.html
+++ b/about.html
@@ -29,6 +29,11 @@
             </thead>
         </tr>
      </table>
+     <style>
+        #hutao {
+            float:down;
+        }
+     </style>
                 <h1> ABOUT ME </h1>
                 <br>
                 <p>Hello there! I'm Jay Lei, a computer science major here at the University of Rhode Island. I'm very interested in the field of computer science
@@ -40,7 +45,7 @@
                     <br>I'm also a pianist, violinist, tennis player, strategy game enjoyer, and WW2 history connoisseur. 
                 </p>
                 <p>I highly suggest looking at my linktree (click on the picture) to find my artistic works and ways to stay in touch!
-                    <a href="https://linktr.ee/carz0987"> <img src="linktreethumbnail.png" alt="linktree" width="200"></a>
+                    <a href="https://linktr.ee/carz0987"> <img id="hutao" src="linktreethumbnail.png" alt="linktree" width="200"></a>
                 </p>
     </body>
 </html>
