--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@
      </table>
      <style>
         #hutao {
-            float:down;
+            float: bottom;
+            margin: bottom;
         }
      </style>
                 <h1> ABOUT ME </h1>
