--- a/about.html
+++ b/about.html
@@ -31,8 +31,7 @@
      </table>
      <style>
         #hutao {
-            float: bottom;
-            margin: bottom;
+            margin: bottom, 30px;
         }
      </style>
                 <h1> ABOUT ME </h1>
