--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
      </table>
      <style>
         #hutao {
-            margin: bottom, 30px;
+            float: right, 30%;
         }
      </style>
                 <h1> ABOUT ME </h1>
@@ -45,6 +45,7 @@
                     <br>I'm also a pianist, violinist, tennis player, strategy game enjoyer, and WW2 history connoisseur. 
                 </p>
                 <p>I highly suggest looking at my linktree (click on the picture) to find my artistic works and ways to stay in touch!
+                    <br>
                     <a href="https://linktr.ee/carz0987"> <img id="hutao" src="linktreethumbnail.png" alt="linktree" width="100"></a>
                 </p>
     </body>
