--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
                 <p>
             You can learn more about me by clicking on the "About Me" button!
                 </p>
+            <p>
+                My applications can be found by clicking on the "Apps" button.
+            </p>
                 <p>
-                    Likewise, my Javascripts can be found by clicking on the "Javascripts" button.
+                My Javascripts can be found by clicking on the "Javascripts" button.
                 </p>
                     <br>
             This website currently only features limited functionality and several buttons to switch to different pages. I will add more stylization to this website in the near future.
