--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             <tr>
                 <thead>
                 <th align="center">
-                <a href="index.html"> <img src="homebutton.png" alt="homebutton" width="200" height="50"> </a> </td>
+                <a href="index.html"> <img src="homebutton.png" alt="homebutton" width="100%" > </a> </td>
                 </th> 
                
                 <th align="center">
-                <a href="javascripts.html"> <img src="javascriptsbutton.png" alt="homebutton" width="200" height="50"> </a>
+                <a href="javascripts.html"> <img src="javascriptsbutton.png" alt="homebutton" width="100%"> </a>
                 </th>
 
                 <th align="center">
-                <a href="about.html"> <img src="aboutmebutton.png" width="200" height="50"> </a>
+                <a href="about.html"> <img src="aboutmebutton.png" width="100%"> </a>
                 </th>
 
                 <th align="center">
-                    <a href="apps.html"> <img src="appsbutton.png" alt="apps" width="200" height="50"> </a>
+                    <a href="apps.html"> <img src="appsbutton.png" alt="apps" width="100%"> </a>
                 </th>
                 </thead>
             </tr>
