--- a/about.html
+++ b/about.html
@@ -8,27 +8,14 @@
     <body>
     <div>
     <img src = myBanner.png alt="banner" width="100%">
-    <table>
+    <table width="100%">
         <tr>
-            <thead>
-            <th align="center">
-            <a href="index.html"> <img src="homebutton.png" alt="homebutton" width="200" height="50"> </a> </td>
-            </th> 
-           
-            <th align="center">
-            <a href="javascripts.html"> <img src="javascriptsbutton.png" alt="homebutton" width="200" height="50"> </a>
-            </th>
-
-            <th align="center">
-            <a href="about.html"> <img src="aboutmebutton.png" width="200" height="50"> </a>
-            </th>
-
-            <th align="center">
-                <a href="apps.html"> <img src="appsbutton.png" alt="apps" width="200" height="50"> </a>
-            </th>
-            </thead>
-        </tr>
-     </table>
+            <td align="center"><a href="index.html"><img src="homebutton.png"></a></td>
+            <td align="center"><a href="javascripts.html"><img src="javascriptsbutton.png"></a></td>
+            <td align="center"><a href="about.html"><img src="aboutmebutton.png"></a></td>
+            <td align="center"><a href="apps.html"><img src="appsbutton.png"></a></td>
+       </tr>
+      </table>
      <style>
         #hutao {
             float: right, 30%;
