--- a/apps.html
+++ b/apps.html
@@ -10,10 +10,10 @@
     <img src = myBanner.png alt="banner" width="100%">
     <table width="100%">
         <tr>
-            <td align="center"><a href="index.html"><img src="homebutton.png"></a></td>
-            <td align="center"><a href="javascripts.html"><img src="javascriptsbutton.png"></a></td>
-            <td align="center"><a href="about.html"><img src="aboutmebutton.png"></a></td>
-            <td align="center"><a href="apps.html"><img src="appsbutton.png"></a></td>
+            <td align="center"><a href="index.html"><img src="homebutton.png" width="150px"></a></td>
+            <td align="center"><a href="javascripts.html"><img src="javascriptsbutton.png" width="150px"></a></td>
+            <td align="center"><a href="about.html"><img src="aboutmebutton.png" width="150px"></a></td>
+            <td align="center"><a href="apps.html"><img src="appsbutton.png" width="150px"></a></td>
        </tr>
       </table>
                 <h1> Applications </h1>
