--- a/apps.html
+++ b/apps.html
@@ -11,11 +11,11 @@
     <table width="100%">
         <tr>
             <td align="center"><a href="index.html"><img src="homebutton.png" width="200px" height="50px"></a></td>
-            <td align="center"><a href="javascripts.html"><img src="javascriptsbutton.png" width="200px" height="150px"></a></td>
-            <td align="center"><a href="about.html"><img src="aboutmebutton.png" width="200px" height="150px"></a></td>
-            <td align="center"><a href="apps.html"><img src="appsbutton.png" width="200px" height="150px"></a></td>
+            <td align="center"><a href="javascripts.html"><img src="javascriptsbutton.png" width="200px" height="50px"></a></td>
+            <td align="center"><a href="about.html"><img src="aboutmebutton.png" width="200px" height="50px"></a></td>
+            <td align="center"><a href="apps.html"><img src="appsbutton.png" width="200px" height="50px"></a></td>
        </tr>
-      </table>
+      </table>sf
                 <h1> Applications </h1>
                 <br>
                 <p>This is a place for me to showcase my upcoming applications! Stay tuned.
