--- a/apps.html
+++ b/apps.html
@@ -15,7 +15,7 @@
             <td align="center"><a href="about.html"><img src="aboutmebutton.png" width="200px" height="50px"></a></td>
             <td align="center"><a href="apps.html"><img src="appsbutton.png" width="200px" height="50px"></a></td>
        </tr>
-      </table>sf
+      </table>
                 <h1> Applications </h1>
                 <br>
                 <p>This is a place for me to showcase my upcoming applications! Stay tuned.
