--- a/javascripts.html
+++ b/javascripts.html
@@ -17,10 +17,13 @@
        </tr>
       </table>
     <br>
-                <p>
+    <h1>
+        Javascripts
+    </h1>
+        <p>
            This page is currently undergoing construction!
-                </p>
-                    <br>
+        </p>
+            <br>
     </div>
     </body>
 </html>
