--- a/apps.html
+++ b/apps.html
@@ -18,7 +18,8 @@
       </table>
                 <h1> Applications </h1>
                 <br>
-                <p>This is a place for me to showcase my upcoming applications! Stay tuned.
+                <p>
+                    This is a place for me to showcase my upcoming applications! Stay tuned.
                 </p>
     </body>
 </html>
