--- a/about.html
+++ b/about.html
@@ -5,7 +5,18 @@
         <title>About Jay</title>
         <link rel= "stylesheet" href="style.css">
     </head>
+    <style>
+        body   {
+            background-color: #b0c9ff;
+            background-image: url("background.png");
+          }
+        div.transbox {
+             background-color: #d9e5ff;
+             opacity: 0.8;
+        }
+    </style>
     <body>
+
     <div>
     <img src = myBanner.png alt="banner" width="100%">
     <table width="100%">
@@ -16,25 +27,30 @@
             <td align="center"><a href="apps.html"><img src="appsbutton.png" width="200px" height="50px"></a></td>
        </tr>
       </table>
+      </div>
      <style>
         #hutao {
             float: right, 30%;
         }
      </style>
-                <h1> ABOUT ME </h1>
+
+     <div class="transbox">
+                <h1> <strong><em>ABOUT ME</em> </h1>
                 <br>
-                <p>Hello there! I'm Jay Lei, a computer science major here at the University of Rhode Island. I'm very interested in the field of computer science
-                    and wish to make something that will revolutionize the field in the near future. 
+                <p><em>Hello there! I'm Jay Lei, a computer science major here at the University of Rhode Island. I'm very interested in the field of computer science
+                    and wish to make something that will revolutionize the field in the near future.
                     <br>However, I have much more to accomplish before I can fulfill my dreams. 
                 </p>
                 <p>
                     I used to be a Signals and Communications Officer for my High School JROTC program, and I believe it has taught me a thing or two about web design.
                     <br>I'm also a pianist, violinist, tennis player, strategy game enjoyer, and WW2 history connoisseur. 
                 </p>
-                <p>I highly suggest looking at my linktree (click on the picture) to find my artistic works and ways to stay in touch!
+                <p>I highly suggest looking at my linktree (click on the picture below) to find my artistic works and ways to stay in touch!</em></strong>
                     <br>
                     <br>
                     <a href="https://linktr.ee/carz0987"> <img id="hutao" src="linktreethumbnail.png" alt="linktree" width="100"></a>
                 </p>
+     </div>
+    </div>
     </body>
 </html>
