--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
-    <img src = myBanner.png alt="banner" width="100%">
+<div>
+        <img src = myBanner.png alt="banner" width="100%">
     <table width="100%">
         <tr>
             <td align="center"><a href="index.html"><img src="homebutton.png" width="200px" height="50px"></a></td>
@@ -16,8 +16,14 @@
             <td align="center"><a href="apps.html"><img src="appsbutton.png" width="200px" height="50px"></a></td>
        </tr>
       </table>
+<style>
+    div.transbox {
+        background-color: #d9e5ff;
+        opacity: 0.8;
+    }
+</style>
     <br>
-           
+    <div class="transbox"> 
     <h1> Welcome to <em>Jay's</em> Programming Portfolio! </h1>
                 <br>
                 <br>
@@ -37,5 +43,6 @@
             </p>
             This website currently only features limited functionality and several buttons to switch to different pages. I will add more stylization to this website in the near future.
             </div>
+        </div>
     </body>
 </html>
