--- a/javascripts.html
+++ b/javascripts.html
@@ -18,10 +18,10 @@
       </table>
     <br>
     <h1>
-        Javascripts
+        Javascript Projectsgg
     </h1>
         <p>
-           
+           This is a collection of all my Javascripts! Feel free to interact with them as you'd like.
         </p>
             <br>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400">Lei_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
