--- a/javascripts.html
+++ b/javascripts.html
@@ -18,7 +18,7 @@
       </table>
     <br>
     <h1>
-        Javascript Projectsgg
+        Javascript Projectssdfr
     </h1>
         <p>
            This is a collection of all my Javascripts! Feel free to interact with them as you'd like.
