--- a/javascripts.html
+++ b/javascripts.html
@@ -25,6 +25,7 @@
         </p>
             <br>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400">Lei_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
-    </div>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472">Lei_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+        </div>
     </body>
 </html>
