--- a/javascripts.html
+++ b/javascripts.html
@@ -24,8 +24,8 @@
            This is a collection of all my Javascripts! Feel free to interact with them as you'd like.
         </p>
             <br>
-            <h2><a href="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400">Lei_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400/embed.js?editor=no&buttons=yes&author=no&embed=yes"></script></p>
-            <h2><a href="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472">Lei_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472/embed.js?editor=no&buttons=yes&author=no&embed=yes"></script></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400">Lei_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472">Lei_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         </div>
     </body>
 </html>
