--- a/javascripts.html
+++ b/javascripts.html
@@ -26,6 +26,9 @@
             <br>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400">Lei_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_dancingbitmoji/4760876441190400/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472">Lei_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_racingbitmoji/4596445748969472/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_dancingbitmojifun/6530393731284992">Lei_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_dancingbitmojifun/6530393731284992/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_racingbitmojifun/4882752672940032">Lei_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_racingbitmojifun/4882752672940032/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_bitmojifun/5663551353569280">Lei_bitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_bitmojifun/5663551353569280/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p></p>
         </div>
     </body>
 </html>
