--- a/javascripts.html
+++ b/javascripts.html
@@ -31,6 +31,8 @@
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_bitmojifun/5663551353569280">Lei_bitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_bitmojifun/5663551353569280/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_decision/5211264738967552">Lei_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_decision/5211264738967552/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_bitmojifollow/5156649196634112">Lei_bitmojiFollow</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_bitmojifollow/5156649196634112/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_summations/5122761078390784">Lei_summations</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_summations/5122761078390784/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_zoo/5430380192120832">Lei_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_zoo/5430380192120832/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         </div>
     </body>
 </html>
