--- a/javascripts.html
+++ b/javascripts.html
@@ -34,6 +34,7 @@
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_summations/5122761078390784">Lei_summations</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_summations/5122761078390784/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_zoo/5430380192120832">Lei_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_zoo/5430380192120832/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_tag/6589378408792064">Lei_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_tag/6589378408792064/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_contacts/5613784565071872">Lei_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_contacts/5613784565071872/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         </div>
     </body>
 </html>
