--- a/javascripts.html
+++ b/javascripts.html
@@ -35,6 +35,8 @@
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_zoo/5430380192120832">Lei_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_zoo/5430380192120832/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_tag/6589378408792064">Lei_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_tag/6589378408792064/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
             <h2><a href="https://www.khanacademy.org/computer-programming/lei_contacts/5613784565071872">Lei_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_contacts/5613784565071872/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+            <h2><a href="https://www.khanacademy.org/computer-programming/lei_education/6292647011991552">Lei_education</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_education/6292647011991552/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+            h2><a href="https://www.khanacademy.org/computer-programming/lei_frogger/5312801534427136">Lei_frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/lei_frogger/5312801534427136/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         </div>
     </body>
 </html>
