--- a/final.html
+++ b/final.html
@@ -22,10 +22,12 @@
         FINAL PROJECT
     </h1>
         <p>
-           This is the final project for CSC 106, and 
+           This is my collaborative final project for CSC 106.
         </p>
             <br>
-            
+        <p>
+            This project is a simple bullet dodging game in which you take control
+        </p>
         </div>
     </body>
 </html>
