--- a/Jay's Programming Portfolio.html
+++ b/Jay's Programming Portfolio.html
@@ -19,6 +19,8 @@
                 
                    <th>
                        <a href="about.html"> <img src="aboutmebutton.png"> </a>
+                   <th>
+                       <a href="final.html"><img src="appsbutton.png"> </a>
          </table>              
     <br>
     <div>           
