--- a/Jay's Programming Portfolio.html
+++ b/Jay's Programming Portfolio.html
@@ -20,7 +20,7 @@
                    <th>
                        <a href="about.html"> <img src="aboutmebutton.png"> </a>
                    <th>
-                       <a href="final.html"><img src="appsbutton.png"> </a>
+                       <a href="final.html"><img src="finalbutton.png"> </a>
          </table>              
     <br>
     <div>           
