--- a/apps.html
+++ b/apps.html
@@ -14,7 +14,7 @@
             <td align="center"><a href="javascripts.html"><img src="javascriptsbutton.png" width="200px" height="50px"></a></td>
             <td align="center"><a href="about.html"><img src="aboutmebutton.png" width="200px" height="50px"></a></td>
             <td align="center"><a href="apps.html"><img src="appsbutton.png" width="200px" height="50px"></a></td>
-            <td align="center"><a href="final.html"><img src="appsbutton.png" width="200px" height="50px"></a></td>
+            <td align="center"><a href="final.html"><img src="finalbutton.png" width="200px" height="50px"></a></td>
        </tr>
       </table>
                 <h1> Applications </h1>
