--- a/final.html
+++ b/final.html
@@ -26,7 +26,23 @@
         </p>
             <br>
         <p>
-            This project is a simple bullet dodging game in which you take control
+            This project is a simple side-scrolling bullet hell game in which you take control of a small biplane and attempt to dodge comically oversized munitions headed your way!
+        </p>
+            <br>
+        <p>
+            THE STORY:
+            <br>
+            It is February, 1949. The German Reich has won the Second World War, and the Soviet Union has fallen far, with the Germans taking territory up to Moscow 
+            and the Japanese taking territory in Siberia. 
+            <br>
+            There seems to be little hope left for the state to continue functioning.
+            <br>
+            However, recent events (mainly the death of The Fuhrer himself) have given Soviet resistance members a chance to band together and strike back at their oppressors. 
+            You are a spy pilot for the resistance, and have just finished a mission stealing blueprints from the German Reich that are planning create a nuclear weapon. 
+            You must bring these blueprints to headquarters, but right as you take off, you are assaulted by newly-operational German missile systems that span for miles in 
+            the snow. 
+            <br>
+            Can you survive the onslaught of hundreds of missiles and bring the plans back to the Motherland?
         </p>
         </div>
     </body>
