--- a/final.html
+++ b/final.html
@@ -19,7 +19,7 @@
       </table>
     <br>
     <h1>
-        FINAL PROJECT
+        SOVIET MISSILE DODGE
     </h1>
         <p>
            This is my collaborative final project for CSC 106.
