--- a/final.html
+++ b/final.html
@@ -50,7 +50,7 @@
         <p>
             Can you survive the onslaught of hundreds of missiles and bring the plans back to the Motherland?
         </p>
-        <h2><a href="https://www.khanacademy.org/computer-programming/4th-iteration-plane-game/5173779428327424">4th Iteration Plane Game</a></h2><script src="https://www.khanacademy.org/computer-programming/4th-iteration-plane-game/5173779428327424/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/4th-iteration-plane-game/5173779428327424">SOVIET MISSILE DODGE</a></h2><script src="https://www.khanacademy.org/computer-programming/4th-iteration-plane-game/5173779428327424/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         </div>
     </body>
 </html>
