--- a/final.html
+++ b/final.html
@@ -27,6 +27,8 @@
             <br>
         <p>
             This project is a simple side-scrolling bullet hell game in which you take control of a small biplane and attempt to dodge comically oversized munitions headed your way!
+            <br>
+            Use the space bar to keep the plane in the air, if you hit the ground or suffer 3 hits by a missile, you're dead!
         </p>
             <br>
     <h2>
