--- a/final.html
+++ b/final.html
@@ -44,7 +44,7 @@
             <br>
         <p>
             However, recent events (mainly the death of The Fuhrer himself) have given Soviet resistance members a chance to band together and strike back at their oppressors. 
-            You are a spy pilot for the resistance, and have just finished a mission stealing blueprints from the German Reich that are planning create a nuclear weapon. 
+            You are a spy pilot for the resistance, and have just finished a mission stealing blueprints from the German Reich that are necessary to create a nuclear weapon. 
             You must bring these blueprints to headquarters, but right as you take off, you are assaulted by newly-operational German missile systems that span for miles in 
             the snow.
         </p> 
