--- a/final.html
+++ b/final.html
@@ -53,6 +53,13 @@
             Can you survive the onslaught of hundreds of missiles and bring the plans back to the Motherland?
         </p>
         <h2><a href="https://www.khanacademy.org/computer-programming/4th-iteration-plane-game/5173779428327424">SOVIET MISSILE DODGE</a></h2><script src="https://www.khanacademy.org/computer-programming/4th-iteration-plane-game/5173779428327424/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <br>
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YtBJk--0vEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/MAXS6jyKE78" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
         </div>
     </body>
 </html>
